--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "user",
   "version": "1.0.0",
   "type": "module",
   "private": true,
@@ -11,16 +11,17 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@payment-wallet-app/ui": "workspace:*",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@payment-wallet-app/eslint-config": "workspace:*",
+    "@payment-wallet-app/tailwind-config": "workspace:*",
+    "@payment-wallet-app/typescript-config": "workspace:*",
+    "@payment-wallet-app/db" : "workspace:*",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.0",
