--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@payment-wallet-app/ui",
   "version": "0.0.0",
   "sideEffects": [
     "**/*.css"
@@ -24,9 +24,9 @@
     "react": "^19"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/tailwind-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@payment-wallet-app/eslint-config": "workspace:*",
+    "@payment-wallet-app/tailwind-config": "workspace:*",
+    "@payment-wallet-app/typescript-config": "workspace:*",
     "@tailwindcss/cli": "^4.1.5",
     "@types/react": "^19.1.0",
     "eslint": "^9.27.0",
