--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,9 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./*": "./dist/*.js"
+    "./*": "./dist/*.js",
+    "./appbar":"./Appbar"
+    
   },
   "license": "MIT",
   "scripts": {
