--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,7 +10,7 @@
   "exports": {
     "./styles.css": "./dist/index.css",
     "./*": "./dist/*.js",
-    "./appbar":"./Appbar"
+    "./appbar":"./appbar"
     
   },
   "license": "MIT",
