feat(ui): add AppBar component and integrate with frontend layout

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,7 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./*": "./dist/*.js",
-    "./appbar":"./appbar"
+    "./*": "./dist/*.js"
     
   },
   "license": "MIT",
